Fixed some of the spacing for the help section

--- a/app/components/Help/helpView.css
+++ b/app/components/Help/helpView.css
@@ -9,3 +9,13 @@
 .help-info {
   margin-top: 1em;
 }
+
+.help-header {
+  margin-top: 0;
+  margin-bottom: .25em;
+}
+
+li {
+  margin: .25em;
+}
+
